I have solved the overflow bug on touchscreen devices.

--- a/style.css
+++ b/style.css
@@ -9,7 +9,13 @@
 
 body {
     overflow: hidden;
+    position: relative;
 }
+
+html {
+    overflow: hidden;
+}
+
 
 * {
     font-family: Kumbh Sans, sans-serif;
